# lidar-owl

./: .gitignore  README.md  env.yaml  pyproject.toml
configs/: config.yaml  randlanet_semantickitti.yaml  randlanet_semantickitti_mac.yaml  randlanet_semantickitti_wsl.yaml
configs/dataset/: semantickitti.yaml  semantickitti_mac.yaml  semantickitti_wsl.yaml
configs/model/: randlanet.yaml
configs/pipeline/: semseg_ext.yaml
src/lidar_owl/: datasets.py  eval.py  log.py  losses.py  main.py  metrics.py  ml3d_util.py  models.py  pipelines.py  test.py  train.py  util.py
tests/: test_losses.py  test_semkitti_contract.py  test_stub.py
